waiting to apply modal

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,21 +1,6 @@
-<form>
-    <ul class="flex flex-wrap mb-4">
-      <li class="flex-auto text-center">
-        <a
-          class="block rounded py-3 px-4 transition hover:text-white text-white bg-indigo-400"
-          href="#"
-          >Login</a
-        >
-      </li>
-
-      <li class="flex-auto text-center">
-        <a
-          class="block rounded py-3 px-4 transition hover:text-white text-white bg-indigo-400"
-          href="#"
-          >Login</a
-        >
-      </li>
-    </ul>
+ 
+  <!-- Login Form -->
+  <form>
     <!-- Email -->
     <div class="mb-3">
       <label class="inline-block mb-2">Email</label>
@@ -40,4 +25,4 @@
     >
       Submit
     </button>
-</form>
+  </form>
