--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -1,12 +1,24 @@
-<app-modal>
+<app-modal  >
     <div class="modal-header">
         <p class="text-2xl font-bold" heading>Your Account</p>
         <div class="modal-close cursor-pointer     text-right        ">&#x2715;</div>
     </div>
 
-    <app-login></app-login>
+
+    <app-tab-container>
+        <app-tab>
+            <app-login></app-login>
+        </app-tab>
+    </app-tab-container>
+
+   
+
     
-    <app-register></app-register>
+    <app-tab-container>
+        <app-tab>
+            <app-register></app-register>
+        </app-tab>
+    </app-tab-container>
 
       <!-- <div class="flex justify-between items-center pb-4">
         < Modal Close Button 
