--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="  fixed z-50 inset-0 overflow-y-auto   "  id="modal"       >
+<div class="  fixed z-50 inset-0 overflow-y-auto  "  [ngClass]="{hidden : !isHide}"  id="modal"       >
     <div
       class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0  "
     >
@@ -11,7 +11,6 @@
       <span class="hidden sm:inline-block sm:align-middle sm:h-screen"
         >&#8203;</span
       >
-
       <div
         class="scale  inline-block align-bottom bg-secondary rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
       >
