--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal  >
+<app-modal  [isHide]="hidden">
     <div class="modal-header">
         <p class="text-2xl font-bold" heading>Your Account</p>
         <div class="modal-close cursor-pointer     text-right        ">&#x2715;</div>
