--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-    <button class="btn" (click)="isHidden()">Click here</button>
-    <app-auth-modal  [hidden]="hidden"   ></app-auth-modal>    
+    <button class="btn"   (click)="ishidden()" >Click here</button>
+    <app-auth-modal   (authHiddenChange)="ishidden()"  [authHidden]="hidden"   ></app-auth-modal>    
 </div>
 
 
