--- a/src/app/shared/tab-container/tab-container.component.html
+++ b/src/app/shared/tab-container/tab-container.component.html
@@ -6,8 +6,13 @@
         >Login</a
       >
     </li>
-
-   
-</ul>
-
-<ng-content></ng-content>
+    <li class="flex-auto text-center">
+      <a
+        class="block rounded py-3 px-4 transition hover:text-white text-white  "
+        href="#"
+        >Register</a
+      >
+    </li>
+  </ul>
+  
+  <ng-content></ng-content>
