--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -11,14 +11,14 @@
         </app-tab>
     </app-tab-container>
 
-   
 
     
-    <app-tab-container>
-        <app-tab>
-            <app-register></app-register>
-        </app-tab>
-    </app-tab-container>
+    
+        <div>
+            <app-tab>
+                <app-register></app-register>
+            </app-tab>
+        </div>
 
       <!-- <div class="flex justify-between items-center pb-4">
         < Modal Close Button 
