creating an ID System

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div>
-    <button class="btn"   (click)="ishidden()" >Click here</button>
-    <app-auth-modal   (authHiddenChange)="ishidden()"  [authHidden]="hidden"   ></app-auth-modal>    
+    <button class="btn" (click)="openModal()">Click Me</button>
+    <app-auth-modal></app-auth-modal>
 </div>
-
-
