--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,9 +1,9 @@
-<div class="  fixed z-50 inset-0 overflow-y-auto  "     id="modal"     [ngClass]="{hidden : !ModalHide}"    >
+<div class="  fixed z-50 inset-0 overflow-y-auto  "     id="modal"      [ngClass]="{hidden : !modal.isHidden()}"    >
     <div
       class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0  "
     >
       <!-- Modal BG Overlay -->
-      <div   class="fixed inset-0 transition-opacity"  (click)="modalBinder()"  >
+      <div   class="fixed inset-0 transition-opacity"   (click)="modal.toggleHidden()" >
         <div class="absolute inset-0 bg-gray-800 opacity-75"></div>
       </div>
 
