--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -1,7 +1,7 @@
-<app-modal    [ModalHide]="authHidden"   (modalHideChange)="authHide()"      >
+<app-modal          >
     <div class="modal-header">
         <p class="text-2xl font-bold" heading>Your Account</p>
-        <div class="modal-close cursor-pointer     text-right   "  (click)="authHide()"  >&#x2715;</div>
+        <div class="modal-close cursor-pointer     text-right "   (click)="modal.toggleHidden()" >&#x2715;</div>
     </div>
 
 
